--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
 </head>
