add delete buttons

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <div class="grid">
         <div class="participants">
             <h1 class="heading">Wij komen ook!</h1>
-            <ul class="list"></ul>
+            <ul class="list">
+            </ul>
         </div>
     </div>
-</body>
 
+</body>
 </html>
